---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis

---------------------------
  Jackdmp changes log
---------------------------

2009-07-28 Stephane Letz  <letz@grame.fr>

	* Fix CopyAndConvertIn for Solaris backends.

2009-07-22 Stephane Letz  <letz@grame.fr>

	* Version 1.9.4 started.
    * Solaris boomer backend now working in capture or playback only mode.
    * Fix control.h for proper compilation on Solaris.

2009-07-17 Stephane Letz  <letz@grame.fr>

	* Loopback backend reborn as a dynamically loadable separated backend.
	* -L parameter for loopback backend activated again in jackd.

2009-07-17 Stephane Letz  <letz@grame.fr>

	* Big rewrite of Solaris boomer driver, seems to work in duplex mode at least.

2009-07-16 Stephane Letz  <letz@grame.fr>

	* In combined --dbus and --classic compilation code, use PulseAudio acquire/release code.

2009-07-15 Stephane Letz  <letz@grame.fr>

	* Rename JackDriver::Init method to JackDriver::Initialize (to avoid confusion with JackThread::Init method).
	* Update Solaris boomer driver.
	* Report some cleanup and documentation improvements done on JACK1 timing functions.

2009-07-11 Stephane Letz  <letz@grame.fr>

	* Raise drivers time out used in synchronous mode.

2009-07-09 Stephane Letz  <letz@grame.fr>

	* Use __attribute__((__packed__)) again, more fixes for 64/32 mixed mode.
	* Torben Hohn changes for 64/32 mixed mode in wscripts.
	* Add compile time option for maximum ports per application.

2009-07-07 Stephane Letz  <letz@grame.fr>

	* Use __attribute__((__aligned__(32))) instead of __attribute__((__packed__)) for 64/32 mixed mode.

2009-07-03 Stephane Letz  <letz@grame.fr>

	* Another Tim Bechmann memops.c optimization patch.
